--- a/src/components/AboutMe/AboutMe.module.css
+++ b/src/components/AboutMe/AboutMe.module.css
@@ -2,7 +2,7 @@
 
 .aboutMeContainer {
   padding: 30px;
-  max-width: 70%;
+  max-width: 65%;
   margin-top: 30em;
   background: linear-gradient(135deg, #1f1f1f, #333);
   border-radius: 10px;
@@ -16,8 +16,8 @@
   font-size: 2.5em;
   margin-bottom: 20px;
   text-align: center;
-  color: #f5f5f5;
-  border-bottom: 2px solid #f5f5f5;
+  color: white;
+  border-bottom: 2px solid white;
   padding-bottom: 10px;
   animation: slideIn 1s ease-in-out;
 }
@@ -47,6 +47,32 @@
 
 .experienceList li:hover {
   background: rgba(255, 255, 255, 0.2);
+}
+
+.downloadButton {
+  display: inline-flex;
+  margin-top: 20px;
+  padding: 10px 20px;
+  background-color: white;
+  color: #1f1f1f;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 0.5em;
+  font-weight: bold;
+  transition: background-color 0.3s;
+  width: 19em;
+}
+
+.downloadButton:hover {
+  background-color: aliceblue;
+}
+
+.icon {
+  margin-right: 10px;
+  color: black;
+  height: 1.5em;
+  width: 1.5em;
 }
 
 @keyframes fadeIn {
